tests/NormalTests/paczka1/fuzzy1/78980017.err
Error in line 1: S579 S145 24,2
Error in line 2: S579 S579 66,9
Error in line 3: WDRECx A380 92,7
Error in line 12: WDRECx A380 93,3
Error in line 13: WDRECx A879 43,5
Error in line 21: KnigQP2YneC S579 42,1
Error in line 17: WDRECx S145 85,6
Error in line 14: YcwtB9E S145 2,0
Error in line 25: YcwtB9E S579 74,9
Error in line 33: S579 S145 14,5
